cookbook ch1